2006-08-16  Timothy Brownawell  <tbrownaw@gmail.com>

	* std_hooks.lua: Fix some brokenness from the merge hook changes.

2006-08-15  Zack Weinberg  <zackw@panix.com>

	* Makefile.am: put the lists back the way they were (mostly).

2006-08-15  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/log_quits_on_SIGPIPE/: Try to make the test work.

2006-08-15  Timothy Brownawell  <tbrownaw@gmail.com>

	The new lua version doesn't like the file objects our mkstemp produces.
	* mkstemp.cc mkstemp.hh: Don't keep the file open. This is only called
	from LUAEXT(mkstemp, ), which no longer wants an fd.
	* luaext_mkstemp.cc: Don't try to make a file object, just have
	monotone_mkstemp create a file, then let...
	* std_hooks.lua (temp_file): ... open it with io.open, so lua will
	be happy with it.

2006-08-15  Timothy Brownawell  <tbrownaw@gmail.com>
	* cmd_ws_commit.cc: "status" and "automate get_revision" give
	identical output, except for leading/trailing whitespace. Make "status"
	do what "status --brief" used to do, and make status not take the
	--brief option.
	* tests/status/__driver__.lua:
	* tests/use_restrictions_with_--exclude/__driver__.lua:
	* tests/use_restrictions_with_--exclude_and_inodeprints/__driver__.lua:
	Update affected tests.

2006-08-15  Zack Weinberg  <zackw@panix.com>

	* configure.ac: Delete MTN_POPT_DEPENDENCIES.  Add strptime to
	main AC_CHECK_FUNCS list (this is the only thing that
	MTN_POPT_DEPENDENCIES checked for, that was used outside popt).
	Also add lrint to this list.  Delete AC_SEARCH_LIBS for libdl.
	* lua/luaconf.h: Include config.h. Set LUA_USE_POSIX if _WIN32 is
	not defined.  Add versions of lua_number2int and lua_number2integer
	that use the C99 lrint() function; remove the unreliable union hack.
	At end of file, forcibly undefine all LUA_DL_* macros to ensure
	that lualib.cc uses the stub implementation.
	* m4/popt.m4: Delete file.
	* m4/boost.m4: Create a new macro to factor out code in common