@@ -6275,7 +6275,7 @@ Allow multiple automate commands to be run from one instance of monotone.
 @verbatim
 l6:leavese
 l7:parents40:0e3171212f34839c2e3263e7282cdeea22fc5378e
-l4:teste i5:ab de5:f 8 x1:qe
+@c l4:teste i5:ab de5:f 8 x1:qe
 @end verbatim
 
 @item Input format:
@@ -6283,7 +6283,7 @@ l4:teste i5:ab de5:f 8 x1:qe
 @verbatim
 [ 'o' <string> <string> [<string> <string> [ ... ] ] 'e' ]
 'l' <string> [ <string> [ ... ] ] 'e'
-[ 'i' [<string> [ ... ] ] 'e' ]
+@c [ 'i' [<string> [ ... ] ] 'e' ]
 @end verbatim
 
 The input is a series of commands. The command name plus arguments are
@@ -6292,16 +6292,12 @@ provided as 'l' <string> [<string> ...] 'e', where <string> = <size> colon
 (command options) as 'o' <string> <string> [<string> <string> ...] 'e', where
 strings come in pairs, key followed by value.
 
-It may also be followed by an input stream, encoded as 'i' [<string> ...] 'e'. The strings are concatentated to provide the input stream. A command which reads this input stream will block until the stream is
-terminated with the closing 'e'. If no input stream is provided, it will block
-until the opening character ('o' or 'l') of the next command is given.
-
-There is no requirement that the input stream be given entirely before
-receiving output. This means that peices of input may be given in response
-to output received, allowing for commands to be interactive.
+@c It may also be followed by an input stream, encoded as 'i' [<string> ...] 'e'. The strings are concatentated to provide the input stream. A command which reads this input stream will block until the stream is
+@c terminated with the closing 'e'. If no input stream is provided, it will block
+@c until the opening character ('o' or 'l') of the next command is given.
 
 The space between the ending 'e' of one group of strings and the beginning
-'l', 'o', or 'i' of the next is reserved. Unknown characters will be ignored,
+'l' or 'o' of the next is reserved. Unknown characters will be ignored,
 but characters other than whitespace should not be present.
 
 @item Sample output:
